# Mesh_Voxelization_expl

./: CMakeLists.txt  README.md
src/: mesh_to_voxel.cpp
